misc: add rl / complete relu module

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = submodules/cocotb
 	url = https://github.com/duydl/cocotb.git
 
+[submodule "submodules/td3-gym"]
+	path = submodules/td3-gym
+	url = https://github.com/duydl/td3-gym.git
